Simplify user restaurants endpoint and clean test data