@@ -1,13 +1,10 @@
 package com.github.denconcept.restaurantvoting.restaurant.service;
 
-import com.github.denconcept.restaurantvoting.restaurant.model.Menu;
+import com.github.denconcept.restaurantvoting.restaurant.model.MenuItem;
 import com.github.denconcept.restaurantvoting.restaurant.model.Restaurant;
-import com.github.denconcept.restaurantvoting.restaurant.repository.MenuRepository;
-import com.github.denconcept.restaurantvoting.restaurant.to.AdminRestaurantMenuVoteTo;
-import com.github.denconcept.restaurantvoting.restaurant.to.MenuItemClientTo;
-import com.github.denconcept.restaurantvoting.restaurant.to.RestaurantMenuTo;
-import com.github.denconcept.restaurantvoting.vote.model.Vote;
-import com.github.denconcept.restaurantvoting.vote.repository.VoteRepository;
+import com.github.denconcept.restaurantvoting.restaurant.repository.MenuItemRepository;
+import com.github.denconcept.restaurantvoting.restaurant.to.ClientResponseMenuItemTo;
+import com.github.denconcept.restaurantvoting.restaurant.to.ClientResponseRestaurantMenuItemTo;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
@@ -15,8 +12,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -26,41 +23,28 @@ public class RestaurantService {
 
     public static final String MENUS_CACHE = "userMenus";
     public static final String ADMIN_MENUS_CACHE = "adminMenus";
-
-    private final MenuRepository menuRepository;
-    private final VoteRepository voteRepository;
+    private final MenuItemRepository menuItemRepository;
 
     @Cacheable(MENUS_CACHE)
     @Transactional(readOnly = true)
-    public List<RestaurantMenuTo> getRestaurantsWithMenu(LocalDate menuDate) {
+    public List<ClientResponseRestaurantMenuItemTo> getRestaurantsWithMenu(LocalDate menuDate) {
         log.info("Get restaurants with menu for {}", menuDate);
-        return menuRepository.findAllByMenuDate(menuDate).stream()
-                .map(menu -> {
-                    Restaurant restaurant = menu.getRestaurant();
-                    return new RestaurantMenuTo(restaurant.getId(), restaurant.getName(), toMenuItems(menu));
-                })
-                .toList();
-    }
-
-    @Cacheable(ADMIN_MENUS_CACHE)
-    @Transactional(readOnly = true)
-    public List<AdminRestaurantMenuVoteTo> getRestaurantsWithMenuAndVotes(LocalDate menuDate) {
-        log.info("Get restaurants with menu and votes for {}", menuDate);
-        List<Vote> votes = voteRepository.findAllByVoteDate(menuDate);
-        Map<Integer, Long> voteCounts = votes.stream()
-                .collect(Collectors.groupingBy(vote -> vote.getRestaurant().getId(), Collectors.counting()));
-        return menuRepository.findAllByMenuDate(menuDate).stream()
-                .map(menu -> {
-                    Restaurant restaurant = menu.getRestaurant();
-                    return new AdminRestaurantMenuVoteTo(restaurant.getId(), restaurant.getName(),
-                            voteCounts.getOrDefault(restaurant.getId(), 0L), menu.getId(), toMenuItems(menu));
-                })
-                .toList();
-    }
-
-    private List<MenuItemClientTo> toMenuItems(Menu menu) {
-        return menu.getMenuItems().stream()
-                .map(item -> new MenuItemClientTo(item.getName(), item.getPrice()))
-                .toList();
+        return menuItemRepository.findAllByMenuDate(menuDate).stream()
+                .collect(Collectors.groupingBy(
+                        MenuItem::getRestaurant,
+                        LinkedHashMap::new,
+                        Collectors.toList()))
+                .entrySet().stream()
+                .map(entry -> {
+                    Restaurant restaurant = entry.getKey();
+                    List<MenuItem> menuItems = entry.getValue();
+                    return new ClientResponseRestaurantMenuItemTo(
+                            restaurant.getId(),
+                            restaurant.getName(),
+                            menuItems.stream()
+                                    .map(mi -> new ClientResponseMenuItemTo(
+                                            mi.getName(),
+                                            mi.getPrice())).toList());
+                }).toList();
     }
 }
